<resources>
    <string name="app_name">TripTips chat</string>

    <!-- TABS -->
    <string name="active_chats">Activos</string>
    <string name="archived_chats">Archivados</string>
    <string name="guests">Huéspedes</string>
    <string name="config">Configuración</string>

    <string name="email">E-mail</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="logout">Cerrar sesión</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkout">Checkout</string>
    <string name="search">buscar</string>
    <string name="refresh">actualizar</string>

    <string name="settings_notifications">Notificaciones por nuevo mensaje</string>

    <!-- ERROR MESSAGES -->
    <string name="email_error">Dirección de correo electrónico no válida</string>
    <string name="password_error">Contraseña incorrecta</string>
    <string name="chat_load_error">No ha sido posible cargar las salas de chat</string>
    <string name="chat_update_error">No ha sido posible actualizar las salas de chat</string>
    <string name="logout_error">No ha sido posible cerrar la sesión</string>
    <string name="login_error">No ha sido posible iniciar la sesión. Revise sus credenciales.</string>

    <string name="preference_change_success">Se han modificado sus preferencias con éxito</string>
    <string name="preference_change_error">No se ha podido modificar sus preferencias</string>

    <string name="room_load_error">No ha sido posible cargar el chat</string>
    <string name="message_send_error">No se ha podido enviar el mensaje</string>

    <string name="username_placeholder">Nombre de usuario</string>
    <string name="timestamp_placeholder">DD/MM/AAAA HH:mm</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sit amet ultrices ipsum. Praesent lorem augue, dapibus vel justo eu, feugiat pellentesque tellus. In rutrum quam enim, non accumsan est laoreet eget. Sed consectetur finibus nibh, id bibendum nisi semper vel. Nam et turpis porta</string>

    <string name="write_message_hint">Escriba un mensaje</string>
    <string name="write_message_disabled_hint">La sala está inactiva</string>

    <string name="guestlist_room_load_error">No se ha podido cargar la sala asociada</string>

    <string name="new_message_in_room">Nuevo mensaje en</string>

    <string name="search_hint">Buscar por huésped</string>

    <string name="alert_title_choose_source">Seleccione la fuente</string>
    <string name="image_source_camera">Cámara</string>
    <string name="image_source_gallery">Galería</string>
    <string name="error_getting_image">No ha sido posible acceder a su dispositivo</string>
    <string name="something_wrong">Algo ha ido mal</string>
</resources>
