<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_active"
        android:enabled="true"
        android:icon="@android:drawable/ic_delete"
        android:title="@string/active_chats"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_archived"
        android:enabled="true"
        android:icon="@android:drawable/ic_delete"
        android:title="@string/archived_chats"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_guests"
        android:enabled="true"
        android:icon="@android:drawable/ic_delete"
        android:title="@string/guests"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_config"
        android:enabled="true"
        android:icon="@android:drawable/ic_delete"
        android:title="@string/config"
        app:showAsAction="ifRoom|withText" />
</menu>