<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_medium" />
    <TextView
        android:id="@+id/label_timestamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/timestamp_placeholder"
        android:textColor="@color/gray_dark"
        android:textSize="@dimen/textsize_small"
        android:textAlignment="center"
        android:layout_marginStart="@dimen/spacing_large"/>
    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_small" />
    <TextView
        android:id="@+id/label_sender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/username_placeholder"
        android:textColor="@color/gray_dark"
        android:textSize="@dimen/textsize_medium"
        android:textAlignment="viewEnd"
        android:textStyle="bold"
        android:paddingStart="@dimen/spacing_medium"
        android:paddingEnd="@dimen/spacing_medium"
        android:layout_marginStart="@dimen/spacing_large"/>
    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_medium" />
    <TextView
        android:id="@+id/label_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:text="@string/lorem_ipsum"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_medium"
        android:textAlignment="viewEnd"
        android:layout_marginStart="@dimen/spacing_large"
        android:paddingStart="@dimen/spacing_huge"
        android:paddingEnd="@dimen/spacing_huge"/>
</LinearLayout>